--- a/exercicios/basico.html
+++ b/exercicios/basico.html
@@ -7,9 +7,34 @@
     <script src="/js/vue.min.js"></script>
 </head>
 <body class="exercicio">
+    
+    <div id="app">
+        <p>1) {{ 2 + 2 }}</p> 
+        <p>2) {{ "teste".toUpperCase() }}</p>  
+        <p>3) {{ nome }} RS {{ preco }}, {{ desconto * 100 }}</p>  
+        <p>4) hora certa: {{ horaCerta() }} </p>
+        <p>5) preço com desconto {{ precoComDesconto }}</p>
+    </div>
 
     <script>
-        // ...
+        new Vue({
+            el: "#app",
+            data: {
+                nome: 'caneta',
+                preco: 6.89,
+                desconto: 0.15
+            },
+            methods: {
+                horaCerta() {
+                    return new Date().toLocaleDateString()
+                }
+            },
+            computed: {
+                precoComDesconto() {
+                    return this.preco * (1 - this.desconto)
+                }
+            }
+        })
     </script>
 </body>
 </html>
