--- a/exercicios/binding.html
+++ b/exercicios/binding.html
@@ -7,9 +7,29 @@
     <script src="/js/vue.min.js"></script>
 </head>
 <body class="exercicio">
-
+    <div id="app">
+        <p>{{link}}</p>
+        <p><a href="{{link}}">google?</a></p>
+        <p><a v-bind:href="link">google</a></p>
+        <p><a :href="link">google reduzida</a></p>
+        <p>
+            <input type="text" v-model="nome"><br/>
+            <span>{{nome}}</span>
+        </p>
+    </div>
     <script>
-        // ...
+        new Vue({
+            el: "#app",
+            data: {
+                link: "https://www.google.com",
+                nome: "maria"
+            },
+            watch: {
+                nome(novoValor) {
+                    console.log(novoValor.toUpperCase())
+                }
+            }
+        })
     </script>
 </body>
 </html>
