--- a/exercicios/ifFor.html
+++ b/exercicios/ifFor.html
@@ -7,9 +7,34 @@
     <script src="/js/vue.min.js"></script>
 </head>
 <body class="exercicio">
-
+    <div id="app">
+        <p v-for="(aluno,i) in alunos">
+            {{i+1}}) {{aluno.nome}} - {{aluno.nota}}   
+            <span v-if="aluno.nota >= 9">Quadro de honra</span> 
+            <span v-else-if="aluno.nota >= 7">Aprovado</span>
+            <span v-else-if="aluno.nota >=3">Recuperacão</span>
+            <span v-else>Reprovado</span>         
+        </p>
+        <ul style="list-style:none;">
+            <li v-for="n in 8">
+                <span v-show="n %2 === 0">
+                    {{n}}
+                </span>
+            </li>
+        </ul>
+    </div>
     <script>
-        // ...
+        new Vue({
+            el: '#app',
+            data: {
+                alunos: [
+                    {nome: "ana", nota: 7.8},
+                    {nome: 'bia', nota: 9.1},
+                    {nome: "carlos", nota: 6.8},
+                    {nome: "daniel", nota: 2.8}
+                ]
+            }
+        })
     </script>
 </body>
 </html>
