--- a/exercicios/index.html
+++ b/exercicios/index.html
@@ -22,7 +22,11 @@
                 <a href="estilo.html">Aplicando Estilo</a>
                 <a href="template.html">Template</a>
                 <a href="componente.html">Componente</a>
+               
                 <a href="diretiva.html">Diretiva Personalizada</a>
+            </nav>
+            <nav>
+                <a href="componente2.html">Componente2</a>
             </nav>
         </div>
     </div>
